# kwin-deco-TheRob

./: CMakeLists.txt  INSTALL.md  README.md  install_manifest.txt
code/: CMakeLists.txt  qmldir  therobbutton.cpp  therobbutton.h  therobcolors.cpp  therobcolors.h  therobplugin.cpp  therobplugin.h
package/: metadata.desktop
package/contents/ui/: TheRobButton.qml  config.ui  main.qml
